# escapebot_database

./: LICENSE  README.md  aggregator.py  pyproject.toml
aggregator_package/: pyproject.toml
escape_aggregator/: pyproject.toml
escapeaggregator/: aggregator.py  pyproject.toml
escapeaggregator/escapeaggregator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
midstream/: aggregator.py
